Major refactor. Mostly converted to python3. Move to flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
           content="Search NSFW subreddits by image. Easily find the source for some photos (and more) by finding the relevant posts on reddit.">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <link rel="stylesheet" type="text/css" href="dark.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/dark.css"/>
 </head>
 
 <body>
@@ -244,7 +244,7 @@
     </tr>
 </table> <!-- end of 'page' table -->
 
-<script type="text/javascript" src="search.js"></script>
+<script type="text/javascript" src="../static/search.js"></script>
 </body>
 </html>
 
