--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
             <div id="rri_menu_about" style="padding-top: 2em">
                 <div class="row">
                     <div class="col s3"><span class="right bold">Who?</span></div>
-                    <div class="col s9">Created by 4_pr0n</div>
+                    <div class="col s9">Initially created by 4_pr0n, resurrected by simon987</div>
                 </div>
                 <div class="row">
                     <div class="col s3"><span class="right bold">What?</span></div>
@@ -117,10 +117,8 @@
 <footer class="page-footer">
     <div class="container">
         <div class="row">
-            Suggestions or comments? contact
-            <a class="bookmarklet"
-               href="http://www.reddit.com/message/compose/?to=4_pr0n&subject=about%20i.rarchives.com&message=I%20have%20a%20%3Ccomplaint%2C%20comment%2C%20suggestion%3E%3A"
-            >4_pr0n</a> via reddit
+            Suggestions or comments? Contact me by email <a href="mailto:me@simon987.net">here</a>
+            <a href="https://simon987.net/gpg/">[pubkey]</a>
         </div>
     </div>
     <div class="footer-copyright">
