--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
             <div id="rri_menu_about" style="padding-top: 2em">
                 <div class="row">
                     <div class="col s3"><span class="right bold">Who?</span></div>
-                    <div class="col s9">Initially created by 4_pr0n, resurrected by simon987</div>
+                    <div class="col s9">Originally created by 4_pr0n, resurrected by simon987</div>
                 </div>
                 <div class="row">
                     <div class="col s3"><span class="right bold">What?</span></div>
