hamming distance support for uploads

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
                     <label for="search">Search</label>
                 </div>
                 <div class="input-field col l3">
-                    <label for="distance">Distance (0 = perfect match)</label>
-                    <input id="distance" type="number" min="0" max="40" value="0">
+                    <label for="distance">Distance (0 = perfect match, 30=fuzzy results)</label>
+                    <input id="distance" type="number" min="0" max="30" value="0">
                 </div>
             </div>
         </form>
