hamming distance support for uploads fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,12 +29,12 @@
     <div class="card-panel">
         <form onsubmit="return query()">
             <div class="row">
-                <div class="input-field col l9">
+                <div class="input-field col l8">
                     <input id="search" type="search" required>
                     <label for="search">Search</label>
                 </div>
-                <div class="input-field col l3">
-                    <label for="distance">Distance (0 = perfect match, 30=fuzzy results)</label>
+                <div class="input-field col l4">
+                    <label for="distance">Distance (0=perfect match, 30=fuzzy)</label>
                     <input id="distance" type="number" min="0" max="30" value="0">
                 </div>
             </div>
