--- a/static/main.css
+++ b/static/main.css
@@ -72,6 +72,16 @@ a.nsfw {
     font-weight: bold !important;
 }
 
+.sfw_blue {
+    color: #3D5AFE;
+    letter-spacing: -0.05em;
+    padding: 0;
+    text-shadow: 4px 0 10px rgba(63, 81, 181, 0.4),
+    0 4px 10px rgba(63, 81, 181, 0.4),
+    -4px 0 10px rgba(63, 81, 181, 0.4),
+    0 -4px 10px rgba(63, 81, 181, 0.4);
+}
+
 .nsfw_red {
     color: #b00;
     letter-spacing: -0.05em;
@@ -99,6 +109,34 @@ a.nsfw:hover .nsfw_red {
     0 4px 10px rgba(200, 0, 0, 0.3),
     -4px 0 10px rgba(200, 0, 0, 0.3),
     0 -4px 10px rgba(200, 0, 0, 0.3);
+}
+
+.sfw_bracket {
+    color: #3D5AFE;
+    font-size: 1.2em;
+    letter-spacing: -0.15em;
+    position: relative;
+    text-shadow: 4px 0 10px rgba(63, 81, 181, 0.4),
+    0 4px 10px rgba(63, 81, 181, 0.4),
+    -4px 0 10px rgba(63, 81, 181, 0.4),
+    0 -4px 10px rgba(63, 81, 181, 0.4);
+}
+
+a.nsfw:hover .sfw_bracket {
+    color: #2979FF;
+    letter-spacing: -0.15em;
+    text-shadow: 4px 0 10px rgba(68, 138, 255, 0.3),
+    0 4px 10px rgba(68, 138, 255, 0.3),
+    -4px 0 10px rgba(68, 138, 255, 0.3),
+    0 -4px 10px rgba(68, 138, 255, 0.3);
+}
+
+a.nsfw:hover .sfw_blue {
+    color: #2979FF;
+    text-shadow: 4px 0 10px rgba(68, 138, 255, 0.3),
+    0 4px 10px rgba(68, 138, 255, 0.3),
+    -4px 0 10px rgba(68, 138, 255, 0.3),
+    0 -4px 10px rgba(68, 138, 255, 0.3);
 }
 
 a.nsfw:hover .nsfw_bracket {
@@ -180,4 +218,49 @@ footer a {
 
 .col img {
     width: 100%;
+}
+
+.page-footer.sfw_footer {
+    background-color: #1E88E5;
+}
+
+.swf_tabs.tabs .tab a {
+    color: rgba(30, 136, 229, 0.7);
+}
+
+.swf_tabs.tabs .tab a:focus, .swf_tabs.tabs  .tab a:focus:active {
+    background-color: rgba(30, 136, 229, 0.2);
+}
+
+.swf_tabs.tabs .indicator {
+    background-color: #1E88E5;
+}
+
+/* img slideshow */
+.slideshow {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.gallery-item {
+    position: absolute;
+    width: 100%;
+    display: none !important;
+}
+
+.gallery-item.showcase-img {
+    display: inherit !important;
+}
+
+.sha1 {
+    position: absolute;
+    bottom: 1em;
+}
+code {
+    color: #607D8B;
+}
+
+.push {
+    margin-bottom: auto;
 }
