user & album search fix. Layout fix

--- a/templates/index_sfw.html
+++ b/templates/index_sfw.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% set title = "{SFW} Reddit reverse image search" %}
-{% set description = "Search SFW subreddits by image. Easily find the source for some photos (and more) by finding the relevant posts on reddit.SFW} Reddit reverse image search" %}
+{% set description = "Search SFW subreddits by image. Easily find the source for some photos (and more) by finding the relevant posts on reddit." %}
 
 {% set tabs_style = "sfw_tabs" %}
 {% set footer_style = "sfw_footer" %}
