--- a/templates/index_nsfw.html
+++ b/templates/index_nsfw.html
@@ -1,10 +1,11 @@
 {% extends "layout.html" %}
 
 {% set title = "{NSFW} Reddit reverse image search" %}
-{% set description = "Search NSFW subreddits by image. Easily find the source for some photos (and more) by finding the relevant posts on reddit.SFW} Reddit reverse image search" %}
+{% set description = "Search NSFW subreddits by image. Easily find the source for some photos (and more) by finding the relevant posts on reddit." %}
 
 {% set tabs_style = "" %}
 {% set footer_style = "" %}
+{% set help_style = "deep-orange lighten-1" %}
 
 {% block header %}
     <a class="header nsfw" href="/">
